CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(PROF LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 14)

ADD_EXECUTABLE(header_test test.cpp)
TARGET_INCLUDE_DIRECTORIES(header_test PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(header_test_custom test_custom.cpp)
TARGET_INCLUDE_DIRECTORIES(header_test_custom PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR})
